# AtlasTravelAssistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.agentkanban/: INSTRUCTION.md
.agentkanban/tasks/: task_20260310_080302848_d5u8sy_we_need_to_fix_the_scatter_map_in_the_top_right_ha.md  task_20260310_080433124_6pzb5u_update_loading_screen_in_ui_right_now_the_screen_p.md
.github/: copilot-instructions.md
.github/agents/: APIIntegrator.agent.md  TravelReviewer.agent.md
.github/prompts/: add-claude-tool.prompt.md  generate-travel-component.prompt.md  scaffold-api-route.prompt.md  solution-architect-spec.prompt.md  write-tests.prompt.md
docs/: agent-workflow.md  implementation-plan.md  product-spec.md  progress.md  ui-mockup.html
instructions/: api.instructions.md  components.instructions.md  travel-domain.instructions.md
notebooks/: Travel Agent Testing.ipynb  Weather API Testing.ipynb
src/atlas/: config.py
src/atlas/agents/: __init__.py  prompts.py  travel_agent.py
src/atlas/api/: __init__.py  handlers.py  schemas.py  server.py
src/atlas/api/routes/: __init__.py  chat.py  itinerary.py  profile.py  stream.py
src/atlas/domain/: __init__.py  itinerary.py  models.py  parsing.py  profile.py
src/atlas/llm/: __init__.py  router.py
src/atlas/prompts/: __init__.py  travel.py
src/atlas/tools/: __init__.py  fetch.py  flights.py  itinerary.py  search.py  weather.py
src/atlas/ui/: __init__.py  app.py  callbacks.py  layout.py
src/atlas/ui/assets/: style.css
src/atlas/ui/components/: __init__.py  itinerary.py  profile.py  sidebar.py
tests/: conftest.py
tests/agents/: test_travel_agent.py
tests/api/: test_handlers.py  test_server.py
tests/domain/: test_itinerary.py  test_models.py  test_parsing.py
tests/llm/: test_router.py
tests/tools/: test_fetch.py  test_itinerary.py  test_search.py  test_weather.py
web/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Navbar.tsx
web/components/chat/: ChatPanel.tsx  MessageBubble.tsx  TypingIndicator.tsx
web/components/itinerary/: AccommodationCard.tsx  ActivityCard.tsx  DaySection.tsx  EmptyState.tsx  FlightCard.tsx  ItineraryPanel.tsx  TravelConnector.tsx
web/components/profile/: ProfileModal.tsx
web/components/sidebar/: BudgetTable.tsx  DestinationInfo.tsx  MapCard.tsx  SidebarPanel.tsx  StatusBar.tsx  TripStats.tsx
web/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Tabs.tsx
web/hooks/: useChat.ts  useProfile.ts
