[project]
name = "atlas"
version = "0.1.0"
description = "An LLM-powered travel assistant that helps users plan trips and manage itineraries through a conversational interface"
readme = "README.md"
authors = [{ name = "zburns31", email = "zacbburns@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    # LLM orchestration — LiteLLM provides a unified Python interface
    # for 100+ providers (OpenAI, Anthropic, Google, Groq, Ollama, etc.)
    # Switch models by changing ATLAS_LLM_MODEL; set the provider's API key.
    "langchain>=0.3",
    "langchain-litellm>=0.6", # ChatLiteLLM BaseChatModel wrapper
    "litellm>=1.30", # Unified LLM client (all providers)
    "langfuse>=2.0", # LLM observability — traces, cost, latency
    "langgraph>=0.2", # StateGraph-based agent orchestration
    # Structured data
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Frontend
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.22",
    # Utilities
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3.14", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
atlas = "atlas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[dependency-groups]
dev = ["jupyterlab>=4.5.5"]
